--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css"></head>
+<head>
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
+    <link data-trunk rel="css" href="static/custom.css"/>
+</head>
 <body></body>
 </html>
