--- a/backend/static_content/login_example.html
+++ b/backend/static_content/login_example.html
@@ -27,8 +27,8 @@
                 <h1>Anmelden</h1>
                 <h2>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam</h2>
             </hgroup>
-            <form action="/login" enctype="application/x-www-form-urlencoded", method="post">
-                <input type="text" name="login" placeholder="Login" aria-label="Login" autocomplete="nickname" required>
+            <form id="login_form" action="/login" enctype="application/x-www-form-urlencoded" method="post" >
+                <input type="text" name="username" placeholder="Login" aria-label="Login" autocomplete="nickname" required>
                 <input type="password" name="password" placeholder="Password" aria-label="Password" autocomplete="current-password" required>
                 <fieldset>
                     <label for="remember">
@@ -42,6 +42,19 @@
         <div></div>
     </article>
 </main><!-- ./ Main -->
+<script>
+    let parent = document.getElementById("login_form");
+
+    for(let pair of new URLSearchParams(document.location.search)) {
+        console.log(pair[0])
+        console.log(pair[1])
+        let input = document.createElement("input");
+        input.setAttribute("name", pair[0]);
+        input.setAttribute("type", "hidden");
+        input.setAttribute("value", pair[1]);
+        parent.appendChild(input);
+    }
+</script>
 </body>
 
 </html>
